name:           coq
version:        0.1.0
category:       Theorem Provers
synopsis:       Talk to Coq
-- description:    TODO
license:        AGPL-3
license-file:   LICENCE.txt

author:         Andy Morris
maintainer:     Andy Morris <hello@andy-morris.xyz>

cabal-version:  >= 1.10
build-type:     Simple


library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  exposed-modules:
    Coq
  build-depends:
    base == 4.9.*,
    text == 1.2.*,
    xml == 1.3.*
