name:           coq
version:        0.1.0
category:       Theorem Provers
synopsis:       Talk to Coq
-- description:    TODO
license:        AGPL-3
license-file:   LICENCE.txt

author:         Andy Morris
maintainer:     Andy Morris <hello@andy-morris.xyz>

cabal-version:  >= 1.10
build-type:     Simple

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  exposed-modules:
    Coq,
    Coq.Protocol,
    Coq.XmlAst,
    Coq.XmlParser,
    Coq.Xml
  build-depends:
    base == 4.9.*,
    text == 1.2.*,
    xml == 1.3.*,
    attoparsec == 0.13.*

test-suite test-coq
  type:               exitcode-stdio-1.0
  main-is:            TestMain.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  jhc-options:        -Wall
  other-modules:
    TestCoq.XmlQQ,
    TestCoq.XmlParser,
    TestCoq.Xml
  build-depends:
    base == 4.9.*,
    text == 1.2.*, quickcheck-text == 0.1.*,
    xml == 1.3.*,
    attoparsec == 0.13.*,
    template-haskell == 2.11.*,
    string-qq -any,
    coq,
    tasty == 0.11.*,
    tasty-th == 0.1.*,
    HUnit == 1.3.*, tasty-hunit == 0.9.*,
    QuickCheck == 2.9.*, tasty-quickcheck == 0.8.*
